# aiven-kafka

./: README.md  aiven_kafka.py  conftest.py  consumer.py  database.py  producer.py  pyproject.toml  scheduler.py  schema.sql  settings.py  url_parser.py  urls.yaml  utils.py
tests/: test_consumer.py  test_producer.py  test_scheduler.py  test_url_parser.py
